syntax = "proto3";

package populous;

// Exported interface for the Populous service.
service Populous {
  // Operations for creating, getting, and updating Faculty.
  rpc AddFaculty(Faculty) returns (Faculty) {}
  rpc GetFaculty(GetFacultyRequest) returns (Faculty) {}
  rpc UpdateFaculty(Faculty) returns (Faculty) {}

  // Operations for creating, getting, and updating Applicants.
  rpc AddApplicant(Applicant) returns (Applicant) {}
  rpc GetApplicant(GetApplicantRequest) returns (Applicant) {}
  rpc UpdateApplicant(Applicant) returns (Applicant) {}
}

// Personal information about either an Applicant or Faculty.
message PersonalInfo {
  string firstName = 1;
  string lastName = 2;
  string phoneNumber = 3;
  string email = 4;
  string streetAddress = 5;
  string country = 6;
}

// Information associated with a Faculty.
message Faculty {
  int32 facultyId = 1;
  PersonalInfo personalInfo = 2;
  string department = 3;
  int32 allotedTickets = 4;
}

// Information associated with an Applicant.
message Applicant {
  int32 applicantId = 1;
  PersonalInfo personalInfo = 2;
  int32 gpa = 3;
  map<string, string> researchPapers = 4;
  map<string, string> recommendations = 5;
}

// Faculty to retrieve.
message GetFacultyRequest {
  int32 facultyId = 1;
}

// Applicant to retrieve.
message GetApplicantRequest {
  int32 applicantId = 1;
}